--- a/src/components/Home/Card.css
+++ b/src/components/Home/Card.css
@@ -86,6 +86,81 @@
     background-color: white;
 
 }
+@media (max-width:425px) {
+    .cardd{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        padding: 10px 0 10px 25px;
+        width: 100%;
+        margin-top: 70px;
+    }
+    
+    .card__row{
+        background-color: #1F1D2B;
+        margin: 10px;
+        width: 250px;
+        height: 370px !important;
+        position: relative;
+        border-radius: 15px;
+    }
+    .card__row .card__img{
+        position: absolute;
+        top: -25%;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    .card__row .card__img img{
+        object-fit: contain;
+        width: 170px;
+    }
+    .card__row .card__text{
+        text-align: center;
+        color: white; 
+        position: absolute;
+        top: 30% !important;
+        font-size: 20px;
+    }
+    .card__row .card__cost{
+        position: absolute;
+        top: 57% !important;
+        left: 50%;
+        transform: translateX(-50%);
+        color: white;
+        font-weight: 300;
+    }
+    .card__row .card__count{
+        position: absolute;
+        top: 70% !important;
+        left: 0%;
+        transform: translateX(0%);
+        text-align: center;
+        color: rgba(255, 255, 255, 0.543);
+        font-weight: 300;
+        font-size: 16px !important;
+        width: 250px;
+    }
+    .card__row .card__add button{
+        width: 200px;
+        position: absolute;
+        bottom: -20px;
+        left: 60%;
+        transform: translateX(-50%);
+        border: none;
+        background-color: #EA7C69;
+        color: white;
+        border-radius: 5px;
+        height: 40px;
+        transition: .3s;    
+        }
+    
+    .card__row .card__add button:hover{
+        color:#1F1D2B;
+        font-weight: 600;
+        background-color: white;
+    
+    }
+            
+}
 
 
 
