--- a/src/components/SiteBar/SiteBar.css
+++ b/src/components/SiteBar/SiteBar.css
@@ -210,106 +210,6 @@
   color: white;
 }
 
-.toast{
-  position: absolute;
-  top: 25px;
-  left: 30px;
-  border-radius: 12px;
-  background: #fff;
-  padding: 20px 35px 20px 25px;
-  box-shadow: 0 5px 10px rgba(0,0,0,0.1);
-  border-left: 6px solid #4070f4;
-  overflow: hidden;
-  transform: translateX(calc(100% + 30px));
-  transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.35);
-  z-index: 100;
-}
-.toast.active5{
-  transform: translateX(0%);
-  z-index: 100;
-}
-.toast .toast-content{
-  display: flex;
-  align-items: center;
-}
-.toast-content .check{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 35px;
-  width: 35px;
-  background-color: #4070f4;
-  color: #fff;
-  font-size: 20px;
-  border-radius: 50%;
-}
-.toast-content .message{
-  display: flex;
-  flex-direction: column;
-  margin: 0 20px;
-}
-.message .text{
-  font-size: 20px;
-  font-weight: 400;;
-  color: #666666;
-}
-.message .text.text-1{
-  font-weight: 600;
-  color: #333;
-}
-.toast .close{
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  padding: 5px;
-  cursor: pointer;
-  opacity: 0.7;
-}
-.toast .close:hover{
-  opacity: 1;
-}
-.toast .progress{
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 3px;
-  width: 100%;
-  background: #ddd;
-}
-.toast .progress:before{
-  content: '';
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  background-color: #4070f4;
-}
-.progress.active5:before{
-  animation: progress 5s linear forwards;
-}
-@keyframes progress {
-  100%{
-      right: 100%;
-  }
-}
-.btn_pay{
-  padding: 12px 20px;
-  font-size: 20px;
-  outline: none;
-  border: none;
-  background-color: #4070f4;
-  color: #fff;
-  border-radius: 6px;
-  cursor: pointer;
-  transition: 0.3s;
-}
-.btn_pay:hover{
-  background-color: #0e4bf1;
-}
-.toast.active ~ .btn_pay{
-  pointer-events: none;
-}
 .open_btn {
   width: 350px;
   position: relative;
@@ -888,6 +788,302 @@
   .FoodShopList{
     margin:  0px;
   }
-
-
 }
+@media (max-width:425px) {
+  .SiteBarDecktop {
+    display: none !important;
+  }
+  .SiteBar{
+    width: 0px !important;
+  }
+  .MobileSiteBar{
+    display: flex !important;
+    position: fixed;
+    height: 7vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #1F1D2B;
+    overflow: hidden;
+    padding: 0px 10px;
+    left: 0;
+    right: 0 !important;
+    bottom: 0;
+    z-index: 100;;
+  }
+  .SiteBar__Index {
+    color: #EA7C69;
+    width: 100%;
+    height: 40px;
+    padding: 0px !important;
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+    transition: .2s;
+    position: relative;
+  }
+  .active {
+    color: white;
+    background-color: #EA7C69;
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.400);
+  }
+
+  .SiteBar__Iteam {
+    width: 60px !important;
+    height: 40px;
+    font-size: 16px !important;
+  }
+
+
+  .notification {
+    width: 150px;
+    font-size: 16px;
+    z-index: 100;
+  }
+  .open_btn {
+    width: 250px;
+    top: 29px !important;
+    height: 40px;
+    font-size: 20px;
+    margin-bottom: 60px ;
+  }
+  .payFood__d_flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+    margin: 20px 0;
+    gap: 10px;
+  
+  }
+  
+  .payFood__d_flex h5 {
+    margin: 0;
+    padding: 0;
+    font-size: 16px !important;
+  }
+  
+  .payFood__d_flex_btn {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+    position: relative;
+    top: 50px;
+  }
+  
+  .payFood__d_flex_btn button {
+    width: 130px;
+    border-radius: 10px;
+    background: #EA7C69 !important;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.123);
+    height: 50px;
+    background: none;
+    border: none;
+    color: white;
+    font-size: 14px;
+    margin-bottom: 20px;
+    outline: none;
+  }
+  
+  .payFood__d_flex input {
+    border: 1px solid white;
+    background: #42485f;
+    color: white;
+  
+    ::placeholder {
+      color: white;
+    }
+  
+    width: 120px;
+    outline: none;
+    border-radius: 8px;
+    height: 40px;
+    padding: 0 10px;
+  }
+  
+  .payFood__d_flex select {
+    width: 200px;
+    background-color: #42485f;
+    border-radius: 8px;
+  
+    height: 40px;
+    color: white;
+    outline: none;
+    border: 1px solid white;
+  }
+  
+  .payFood_row {
+    padding: 0 20px;
+    margin: 20px 0;
+  }
+  
+  .payFood_row textarea {
+    width: 100%;
+    height: 30px;
+    outline: none;
+    border-radius: 8px;
+    border: 1px solid white;
+    background: #42485f;
+    color: white;
+  
+    ::placeholder {
+      color: white;
+    }
+  
+    padding: 0 10px;
+  
+  }
+  
+  .payFood_row input {
+    width: 100%;
+    height: 30px;
+    outline: none;
+    border-radius: 8px;
+    border: 1px solid white;
+    background: #42485f;
+    color: white;
+  
+    ::placeholder {
+      color: white;
+    }
+  
+    padding: 0 10px;
+  
+  }
+  
+  .payFood {
+    padding: 0 20px;
+  }
+  
+  .payFood_btnDiv {
+    width: 100px;
+    border: 1px solid grey;
+    background: #1F1D2B;
+    border-radius: 8px;
+    text-align: center;
+    color: grey;
+    margin: 0 10px;
+    height: 70px;
+    padding: 10px 0;
+  }
+  
+  .payFood_btn {
+    display: flex;
+  }
+  
+  .payFood_btnDiv p {
+    margin: 0;
+    padding: 0;
+  }
+  .offcanss_info_header_group_btn {
+    display: flex;
+    align-items: center;
+    width: 250px;
+    gap: 10px;
+    padding: 10px;
+  }
+  
+  .offcanss_info_header_btn {
+    border: none;
+    border-radius: 5px;
+    background-color: #1F1D2B;
+    color: #EA7C69;
+    height: 40px;
+  }
+  
+  .active2 {
+    background-color: #EA7C69;
+    color: white;
+    box-shadow: 0 0 5px whitesmoke;
+  }
+  .offcans_info_body {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 25px 10px 5px 10px;
+    border-bottom: 1px solid gray;
+    color: white;
+    font-weight: 700;
+    font-size: 20px;
+    width: 90%;
+    margin: 0 auto;
+  }
+  
+  .offcans_info_body_text_2 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 120px;
+  }
+  
+  .FoodShopList {
+    height: 250px;
+    margin: 50px 0;
+  
+  }
+  
+  .FoodShopList__Header {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+  }
+  
+  .FoodShopList__Header__img img {
+    object-fit: contain;
+    width: 120px;
+  }
+  
+  .FoodShopList__Header__text {
+    text-align: right;
+    color: white;
+    font-size: 16px !important;
+  }
+  
+  .FoodShopList__Header__text p {
+    font-weight: 700;
+    margin: 10px 0;
+
+  }
+  
+  .offcanss__footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 25px;
+  }
+  
+  .offcanss__footer input {
+    border: 1px solid rgba(255, 255, 255, 0.466);
+    background-color: #393C49;
+    height: 30px;
+    border-radius: 10px;
+    width: 200px;
+    outline: none;
+    caret-color: white;
+    color: white;
+  }
+  
+  .offcanss__footer button {
+    height: 30px;
+    width: 30px;
+    background-color: #393C49;
+    border-radius: 5px;
+    border: 1px solid rgba(228, 14, 128, 0.876);
+    color: #EA7C69;
+  }
+
+  .FoodShopList__Header__text h4{
+    font-size: 16px !important; 
+  }
+  .FoodShopList__Header__text p{
+    font-size: 14px !important; 
+    margin-left: -40px !important;
+  }
+  .active3 {
+    border: 1px solid white !important;color: white;
+  }
+  .FoodShopList{
+    margin:  0px;
+  }
+} 
